force-app/main/default/objects/FormFields__c/FormFields__c.object-meta.xml
<CustomObject>
    <label>FormField</label>
    <nameField>
        <displayFormat>Form-{0000}</displayFormat>
        <label>FormFields Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FormFields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>