force-app/main/default/objects/FormFields__c/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FieldName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>